@@ -14,6 +14,8 @@
 
     * las/arch/x86_64/main.c: Added the CBW/CWDE/CDQE instructions
 
+    * las/arch/x86_64/main.c: Added the CLFLUSH instruction
+
 
 2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>
 
